--- a/HelloWorldApp/Storyboards/Base.lproj/Main.storyboard
+++ b/HelloWorldApp/Storyboards/Base.lproj/Main.storyboard
@@ -193,7 +193,7 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="More info"/>
                                 <connections>
-                                    <segue destination="LDW-5s-ZyW" kind="show" identifier="descriptionPerson" id="lHD-33-ef8"/>
+                                    <segue destination="LDW-5s-ZyW" kind="show" identifier="" id="lHD-33-ef8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -218,7 +218,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="BwD-gc-rjT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BwD-gc-rjT">
                                 <rect key="frame" x="77" y="283" width="166" height="166"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GMb-Gm-cTv">
@@ -253,6 +253,7 @@
                     <connections>
                         <outlet property="descriptionLabel" destination="GMb-Gm-cTv" id="uD0-T3-4Mz"/>
                         <outlet property="nameLabel" destination="sB8-TV-L1r" id="zZE-K8-AfW"/>
+                        <outlet property="picture" destination="BwD-gc-rjT" id="RjH-Ij-pSR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rey-fh-a5B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -280,7 +281,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="1024" height="1024"/>
         <image name="person.fill" catalog="system" width="32" height="32"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
